k8s/services/zennotes-hane/app/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: zennotes
spec:
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
