k8s/services/zennotes-hane/app/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zennotes
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: zennotes
  hostnames:
    - zen-hane.sdlh.eu
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: zennotes
          port: 80
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: zennotes
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: zennotes
  oidc:
    provider:
      issuer: https://auth.sdlh.eu/application/o/zennotes-hane/
    clientID: zennotes-hane
    clientSecret:
      name: zennotes-oidc-credentials
    scopes:
      - offline_access
    refreshToken: true
